<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bottom_sheet"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/bottom_sheet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What do you want ?"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/bs_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_language"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/nav_language"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bs_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_rateus"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_rateus"
                android:textColor="@color/black"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bs_more_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_app"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_moreapp"
                android:textColor="@color/black"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bs_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_feedback"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_feedback"
                android:textColor="@color/black"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bs_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_share"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_sharaapp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bs_privaci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_protected"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_privaci"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
</layout>